<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.codazzi.smsonline.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_settings"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/settings_email"
        android:id="@+id/config_email"
        />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/settings_password"
        android:id="@+id/config_password"
        />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_only_wifi"
        android:id="@+id/config_wifi_only"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/settings_api"
        android:id="@+id/config_uri"
        android:visibility="gone"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/saveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save"
        /><!--android:onClick="saveSettings"-->

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/displayFullSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_full_settings"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="showFullSettings"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/settingsLogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/settingsResetLogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_reset_logs"
        android:onClick="resetLogs"
        android:visibility="gone"
        />
</LinearLayout>
</ScrollView>