<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.codazzi.smsonline.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        style="@style/Block"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/main_sync"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            style="@style/Block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                />
            <TextView
                style="@style/mainTitleUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_url"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Go to settings -->
    <TextView
        style="@style/ItemTitleSingle"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_settings"
        android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:onClick="goToSettings"
        android:padding="5dp" />

    <!-- Status -->
    <LinearLayout
        style="@style/Block"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/main_status"
            android:src="@drawable/ic_info_outline_black_24dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/ItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_status"
                />

            <TextView
                style="@style/ItemValue"
                android:id="@+id/status_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Last sync -->
    <LinearLayout
        style="@style/Block"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/main_sync"
            android:src="@drawable/ic_schedule_black_24dp"/>
        <LinearLayout
            style="@style/Block"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/ItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_sync"
                />

            <TextView
                style="@style/ItemValue"
                android:id="@+id/sync_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/ItemTitle"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_refresh"
        android:drawableStart="@drawable/ic_refresh_black_24dp"
        android:drawableLeft="@drawable/ic_refresh_black_24dp"
        android:onClick="goToMain"
        android:padding="5dp"
        />

    <TextView
        style="@style/ItemTitle"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_goto_website"
        android:drawableStart="@drawable/ic_open_in_browser_black_24dp"
        android:drawableLeft="@drawable/ic_open_in_browser_black_24dp"
        android:padding="5dp"
        android:onClick="goToWebsite"
        />

</LinearLayout>
